# AuthorizedCrawler

./: .gitignore  README.md  main.py  pyproject.toml
config/: db.env  url_info.json
crawl/: __init__.py  naver_smartstore_scrapper.py
crawl/base/: __init__.py  template.py
utils/: __init__.py  cfg.py
